--- a/ExpenseTrackerAPI/package.json
+++ b/ExpenseTrackerAPI/package.json
@@ -2,7 +2,7 @@
   "name": "expresstrackerapi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "devStart": "nodemon server.js"
   },
